# MEGAsync

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitleaksignore  .gitmodules  ACKNOWLEDGEMENTS  ACKNOWLEDGEMENTS.md  Account  CMakeLists.txt  CREDITS.md  INSTALL.mac.md  INSTALL.md  LICENCE.md  LICENSE.md  README.linux.md  README.mac.md  README.md  README.win.md  _service  create_tarball.sh  debian.control  debian.rules  deploy_qt.cmd  full_build_process.cmd  gather_built_products.cmd  installer.nsi  installer_mac.sh  installer_win.nsi  make_installers.cmd  make_uninstallers.cmd  megasync.dsc  megasync.spec  production_build.cmd  sign_modern_context_menu_products.cmd  sign_products.cmd  vcpkg.json
Source/MEGAShellExtDolphin/: CMakeLists.txt  megasync-plugin.cpp
Source/MEGASync/sdk/: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.win32  MegaProxySettings.cpp  MegaProxySettings.h  README.md  SizeProcessor.cpp  SizeProcessor.h  clean.sh  configure.ac  libmega.pc.in  mega.h  megaapi.cpp  megaapi.h  megaapi_impl.cpp  megaapi_impl.h  megabdb.cpp  megabdb.h  megacli.cpp  megacli.h  megaclient.cpp  megaclient.h  megacrypto.cpp  megacrypto.h  megaposix.cpp  megaposix.h  megasqlitedb.cpp  megasqlitedb.h  megawin32.cpp  megawin32.h  readme.txt  sdk.pri
contrib/cmake/: CMakeLists.txt  MEGAsync.exe.manifest  build_from_scratch.cmake  preferred-ports-megasync.txt
contrib/cmake/modules/: desktopapp_configuration.cmake  desktopapp_deploy_qt.cmake  desktopapp_initial_configuration.cmake  desktopapp_load_version.cmake  desktopapp_options.cmake
src/: .gitignore  CMakeLists.txt  MEGA.pro  MEGAShellExt.sln  configure
src/DesignTokensImporter/: CMakeLists.txt
src/DesignTokensImporter/src/: CMakeLists.txt  CommandLineHandler.cpp  CommandLineHandler.h  DesignAssetsRepoManager.cpp  DesignAssetsRepoManager.h  DesignGenerator.cpp  DesignGenerator.h  DesignTokensImporter.cpp  DesignTokensImporter.h  IDesignGenerator.h  IStyleGenerator.h  IThemeGenerator.h  PathProvider.cpp  PathProvider.h  Resources.qrc  SVGIcon.cpp  SVGIcon.h  SVGRenderer.cpp  SVGRenderer.h  StyleDefinitions.h  StylesheetParser.cpp  StylesheetParser.h  TokenManager.cpp  TokenManager.h  Types.h  UIClass.cpp  UIClass.h  UIHandler.cpp  UIHandler.h  Utilities.cpp  Utilities.h  main.cpp  utilities.cpp  utilities.h
src/DesignTokensImporter/tokens/: semantic_tokens_dark_tokens.json  semantic_tokens_light_tokens.json
src/MEGAAutoTests/: CMakeLists.txt
src/MEGAAutoTests/UnitTests/: AllMegaIncludes.h  CMakeLists.txt  MegaCatchReporter.cpp  MegaCatchReporter.h  MegaCatchReporterUtilities.cpp  MegaCatchReporterUtilities.h  ScaleFactorManagerTestFixture.cpp  ScaleFactorManagerTestFixture.h  ScaleFactorManagerTests.cpp  StringConversions.h  main.cpp
src/MEGACrashAnalyzer/: MEGACrashAnalyzer.cpp  MEGACrashAnalyzer.pro  MainWindow.cpp  MainWindow.ui
src/MEGADeprecatedVersion/: MEGADeprecatedVersion.mm  MEGADeprecatedVersion.pro  app.icns
src/MEGALoader/: MEGALoader.cpp
src/MEGALogger/: MegaDebugServer.cpp  MegaDebugServer.ui
src/MEGAShellExt/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ClassFactoryContextMenuExt.cpp  ClassFactoryShellExtNotFound.cpp  ClassFactoryShellExtNotFound.h  ClassFactoryShellExtPending.cpp  ClassFactoryShellExtPending.h  ClassFactoryShellExtSynced.cpp  ClassFactoryShellExtSynced.h  ClassFactoryShellExtSyncing.cpp  ContextMenuData.cpp  ContextMenuData.h  ContextMenuExt.cpp  ContextMenuExt.h  GlobalExportFunctions.def  MEGAShellExt.pro  MEGAShellExt.rc  MEGAShellExt.vcxproj  MEGAShellExt.vcxproj.filters  MEGAinterface.cpp  MEGAinterface.h  RegUtils.cpp  RegUtils.h  ShellExt.cpp  ShellExt.h  ShellExtNotASync.cpp  ShellExtNotASync.h  dllmain.cpp  resource.h
src/MEGAShellExt/ClassicShellContextMenu/: ContextMenuExt.cpp  ContextMenuExt.h
src/MEGAShellExt/LegacyShellContextMenu/: ContextMenuExt.cpp
src/MEGAShellExt/oldContextMenu/: ContextMenuExt.cpp  ContextMenuExt.h
src/MEGAShellExt/packaging/: AppxManifest.xml
src/MEGAShellExtDolphin/: CMakeLists.txt  CMakeLists_kde5.txt  MEGAShellExtDolphin.pro  megasync-plugin-overlay.cpp  megasync-plugin-overlay.json  megasync-plugin.cpp  megasync-plugin.desktop  megasync-plugin.h  megasync-plugin.json
src/MEGAShellExtFinder/: .gitignore
src/MEGAShellExtFinder/MEGAFinderSync.xcodeproj/: project.pbxproj
src/MEGAShellExtFinder/MEGAShellExtFinder/: FinderSync.h  FinderSync.m  FinderSync.mm  Info.plist  Interfaces.h  ShellExt.h  (+2 more)
src/MEGAShellExtNautilus/: CMakeLists.txt  MEGAShellExt.c  MEGAShellExt.h  MEGAShellExtNautilus.pro  mega_ext_client.c  mega_ext_module.c  mega_notify_client.c
src/MEGAShellExtNemo/: CMakeLists.txt  MEGAShellExt.c  MEGAShellExt.h  MEGAShellExtNemo.pro  mega_ext_client.c  mega_ext_client.h  mega_ext_module.c  mega_notify_client.c  mega_notify_client.h
src/MEGAShellExtThunar/: .gitignore  CMakeLists.txt  MEGAShellExt.c  MEGAShellExt.h  MEGAShellExtThunar.pro  mega_ext_client.c  mega_ext_client.h
src/MEGASync/: .gitignore  BandwidthOverquota.cpp  BandwidthOverquota.h  BlockingStageProgressController.cpp  BlockingStageProgressController.h  CMakeLists.txt  CommonMessages.cpp  CommonMessages.h  DesktopNotifications.cpp  DesktopNotifications.h  EventUpdater.cpp  EventUpdater.h  FolderTransferEvents.h  FolderTransferListener.cpp  FolderTransferListener.h  Info_MEGA.plist  MEGASync.pro  MEGAsync.exe.manifest  MacOS11_folder.icns  MegaApplication.cpp  MegaApplication.h  MegaTime.cpp  MegaTime.h  NodeSelectorLoadingDelegate.cpp  NodeSelectorLoadingDelegate.ui  OsNotifications.cpp  OsNotifications.h  RemovedSharesNotificator.cpp  RemovedSharesNotificator.h  ScaleFactorManager.cpp  ScaleFactorManager.h  ScanStageController.cpp  ScanStageController.h  Time.cpp  TimeWrapper.cpp  TransferMetadata.h  TransferNotificationMessageBuilder.cpp  TransferNotificationMessageBuilder.h  TransferQuota.cpp  TransferQuota.h  (+11 more)
src/MEGAUpdateGenerator/: CMakeLists.txt  MEGAUpdateGenerator.cpp  MEGAUpdateGenerator.pro
src/MEGAUpdater/: CMakeLists.txt  MEGAUpdater.pro  MegaUpdater.cpp  Preferences.h  UpdateTask.cpp  UpdateTask.h  UpdaterGUI.ui  icon.rc
(+3235 files in other folders)
